--- a/IOT/src/CppNet100/EasyTcpClient/EasyTcpClient.vcxproj.filters
+++ b/IOT/src/CppNet100/EasyTcpClient/EasyTcpClient.vcxproj.filters
@@ -23,7 +23,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="client.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
