--- a/IOT/src/CppNet100/EasyTcpClient/EasyTcpClient.vcxproj
+++ b/IOT/src/CppNet100/EasyTcpClient/EasyTcpClient.vcxproj
@@ -155,7 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="client.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EasyTcpClient.hpp" />
