--- a/IOT/src/CppNet100/EasyTcpClient/EasyTcpClient.vcxproj
+++ b/IOT/src/CppNet100/EasyTcpClient/EasyTcpClient.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="client.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CELLTimestamp.hpp" />
     <ClInclude Include="EasyTcpClient.hpp" />
     <ClInclude Include="MessageHeader.hpp" />
   </ItemGroup>
