--- a/IOT/src/CppNet100/EasyTcpServer/EasyTcpServer.vcxproj
+++ b/IOT/src/CppNet100/EasyTcpServer/EasyTcpServer.vcxproj
@@ -155,6 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CELLTask.hpp" />
     <ClCompile Include="server.cpp" />
   </ItemGroup>
   <ItemGroup>
