--- a/IOT/src/CppNet100/EasyTcpServer/EasyTcpServer.vcxproj
+++ b/IOT/src/CppNet100/EasyTcpServer/EasyTcpServer.vcxproj
@@ -161,6 +161,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Alloctor.h" />
+    <ClInclude Include="CELLObjectPool.hpp" />
     <ClInclude Include="CELLTimestamp.hpp" />
     <ClInclude Include="EasyTcpServer.hpp" />
     <ClInclude Include="MemoryMgr.hpp" />
