--- a/IOT/src/CppNet100/EasyTcpServer/EasyTcpServer.vcxproj.filters
+++ b/IOT/src/CppNet100/EasyTcpServer/EasyTcpServer.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="MemoryMgr.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CELLObjectPool.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
