--- a/IOT/src/CppNet100/EasyTcpServer/EasyTcpServer.vcxproj
+++ b/IOT/src/CppNet100/EasyTcpServer/EasyTcpServer.vcxproj
@@ -161,6 +161,7 @@
   <ItemGroup>
     <ClInclude Include="CELL.hpp" />
     <ClInclude Include="CELLClient.hpp" />
+    <ClInclude Include="CELLSemaphore.hpp" />
     <ClInclude Include="CELLServer.hpp" />
     <ClInclude Include="CELLTimestamp.hpp" />
     <ClInclude Include="EasyTcpServer.hpp" />
