--- a/IOT/src/CppNet100/EasyTcpServer/EasyTcpServer.vcxproj.filters
+++ b/IOT/src/CppNet100/EasyTcpServer/EasyTcpServer.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="CELLServer.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CELLSemaphore.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
