增加DataFromCollector类，实现c++的数据ASCII到十六进制的转换、累加和校验 异常ASCII字符转换出现FFFF
git-svn-id: https://desktop-9q6n87v/svn/CppNet100@51 6f7da4ff-a47d-c84d-9565-2446d01894d9

--- a/collector2.0/Mbus/EasyTcpServer/EasyTcpServer.vcxproj
+++ b/collector2.0/Mbus/EasyTcpServer/EasyTcpServer.vcxproj
@@ -156,6 +156,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CELLTask.hpp" />
+    <ClCompile Include="DataFromCollector.cpp" />
     <ClCompile Include="server.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -168,6 +169,7 @@
     <ClInclude Include="CELLServer.hpp" />
     <ClInclude Include="CELLThread.hpp" />
     <ClInclude Include="CELLTimestamp.hpp" />
+    <ClInclude Include="DataFromCollector.h" />
     <ClInclude Include="EasyTcpServer.hpp" />
     <ClInclude Include="INetEvent.hpp" />
     <ClInclude Include="MessageHeader.hpp" />
