--- a/collector2.0/Mbus/EasyTcpServer/EasyTcpServer.vcxproj.filters
+++ b/collector2.0/Mbus/EasyTcpServer/EasyTcpServer.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="CELLTask.hpp">
       <Filter>头文件</Filter>
     </ClCompile>
+    <ClCompile Include="DataFromCollector.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EasyTcpServer.hpp">
@@ -57,6 +60,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="CELLNetWork.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="DataFromCollector.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
