删除消息头文件，改变结构体数据接收为char*数据接收
git-svn-id: https://desktop-9q6n87v/svn/CppNet100@59 6f7da4ff-a47d-c84d-9565-2446d01894d9

--- a/collector2.0/Mbus/EasyTcpServer/EasyTcpServer.vcxproj
+++ b/collector2.0/Mbus/EasyTcpServer/EasyTcpServer.vcxproj
@@ -159,7 +159,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DataFromCollector.cpp" />
     <ClCompile Include="server.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="DataFromCollector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
