删除服务端不需要的头文件，舍弃字节流 增加原始数据处理基类RawDataDeal、CELLMBus（只实现固定心跳包回复）、CELLWeb（无实现） 增加公共函数头文件 现已实现符合Mbus集抄器的心跳包收发
git-svn-id: https://desktop-9q6n87v/svn/CppNet100@60 6f7da4ff-a47d-c84d-9565-2446d01894d9

--- a/collector2.0/Mbus/EasyTcpServer/EasyTcpServer.vcxproj
+++ b/collector2.0/Mbus/EasyTcpServer/EasyTcpServer.vcxproj
@@ -93,7 +93,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <SDLCheck>true</SDLCheck>
+      <SDLCheck>false</SDLCheck>
       <AdditionalIncludeDirectories>..\depends\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
@@ -109,7 +109,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <SDLCheck>true</SDLCheck>
+      <SDLCheck>false</SDLCheck>
       <AdditionalIncludeDirectories>..\depends\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
@@ -127,7 +127,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <SDLCheck>true</SDLCheck>
+      <SDLCheck>false</SDLCheck>
       <AdditionalIncludeDirectories>..\depends\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
@@ -147,7 +147,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <SDLCheck>true</SDLCheck>
+      <SDLCheck>false</SDLCheck>
       <AdditionalIncludeDirectories>..\depends\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
@@ -159,11 +159,28 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="DataFromCollector.cpp" />
+    <ClCompile Include="CELLMBus.cpp" />
+    <ClCompile Include="CELLWeb.cpp" />
+    <ClCompile Include="RawDataDeal.cpp" />
     <ClCompile Include="server.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DataFromCollector.h" />
+    <ClInclude Include="CELL.hpp" />
+    <ClInclude Include="CELLBuffer.hpp" />
+    <ClInclude Include="CELLClient.hpp" />
+    <ClInclude Include="CELLComFunc.hpp" />
+    <ClInclude Include="CELLLog.hpp" />
+    <ClInclude Include="CELLMBus.h" />
+    <ClInclude Include="CELLNetWork.hpp" />
+    <ClInclude Include="CELLSemaphore.hpp" />
+    <ClInclude Include="CELLServer.hpp" />
+    <ClInclude Include="CELLTask.hpp" />
+    <ClInclude Include="CELLThread.hpp" />
+    <ClInclude Include="CELLTimestamp.hpp" />
+    <ClInclude Include="CELLWeb.h" />
+    <ClInclude Include="EasyTcpServer.hpp" />
+    <ClInclude Include="INetEvent.hpp" />
+    <ClInclude Include="RawDataDeal.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
