--- a/collector2.0/Mbus/EasyTcpServer/EasyTcpServer.vcxproj.filters
+++ b/collector2.0/Mbus/EasyTcpServer/EasyTcpServer.vcxproj.filters
@@ -18,12 +18,63 @@
     <ClCompile Include="server.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="DataFromCollector.cpp">
+    <ClCompile Include="RawDataDeal.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CELLMBus.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CELLWeb.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DataFromCollector.h">
+    <ClInclude Include="RawDataDeal.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CELLMBus.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CELL.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CELLBuffer.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CELLClient.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CELLLog.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CELLNetWork.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CELLSemaphore.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CELLServer.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CELLTask.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CELLThread.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CELLTimestamp.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="EasyTcpServer.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="INetEvent.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CELLWeb.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CELLComFunc.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
